--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@ body {
 }
 
 .title {
-    top: 30%;
+    font-size: 1.2rem;
+    top: 35%;
     left: 20%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -30,12 +31,34 @@ body {
 }
 
 .title1 {
-    top: 40%;
-    left: 48%;
-    width: 70vw;
+    font-size: 1.4rem;
+    top: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
     position: absolute;
     color: #fff;
-    font-size: 4rem;
     font-weight: bold;
+}
+
+
+/*Media Queries*/
+
+@media only screen and (min-width: 768px) {
+    .title {
+        font-size: 1.5rem;
+    }
+    .title1 {
+        font-size: 2rem;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .title {
+        font-size: 2.4rem;
+        top: 35%;
+    }
+    .title1 {
+        font-size: 3.5rem;
+        left: 25%;
+    }
 }
