--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     font-family: 'PT Serif', serif;
     width: 100%;
     height: 100%;
+    color: #707070;
     background-color: #ffffff;
     overflow-x: hidden;
 }
@@ -48,6 +49,21 @@ body {
 }
 
 
+/*History*/
+
+.about-border {
+    display: block;
+    width: 100px;
+    height: 3px;
+    background: #FF0000;
+    margin: 5px auto;
+}
+
+.history-text {
+    margin-top: 2rem;
+}
+
+
 /*Media Queries*/
 
 @media only screen and (min-width: 768px) {
@@ -70,5 +86,12 @@ body {
     .title1 {
         font-size: 3.5rem;
         left: 25%;
+    }
+    .history-text {
+        word-spacing: 5px;
+        line-height: 25px;
+        width: 80%;
+        margin-top: 3rem;
+        padding-top: 5rem;
     }
 }
