--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ img {
 }
 
 .fame-name {
-    color: #fff;
+    color: #838383;
 }
 
 .fame-images-carousel {
@@ -125,6 +125,14 @@ figure:hover+span {
 }
 
 
+/*The Beginings*/
+
+iframe {
+    width: 100%;
+    min-height: 50vh;
+}
+
+
 /*Media Queries*/
 
 @media only screen and (min-width: 768px) {
@@ -136,6 +144,12 @@ figure:hover+span {
     }
     li {
         margin-left: 1.5rem;
+    }
+    iframe {
+        width: 100%;
+        max-width: 50vw;
+        height: 100%;
+        min-height: 50vh;
     }
 }
 
