--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
         body {
             font-family: 'PT Serif', serif;
             width: 100%;
+            min-width: 100vw;
             height: 100%;
             color: #707070;
             background-color: #ffffff;
@@ -84,6 +85,7 @@
             min-width: 100vw;
             height: 100%;
             min-height: 50vh;
+            max-height: 50vh;
         }
         
         .hover figure img {
